# wmfire

./: .gitignore  Makefile.am  README  README.md  configure.ac  wmfire.1
src/: Makefile.am  flameblue.h  flamecorona.h  flamecorona_blue.h  flamecorona_msb.h  flamecorona_red.h  flamedarkblue.h  flamedefault.h  flamegreen.h  flamegreen1.h  flamegreen2.h  flamegreen_msb.h  flameorange.h  session.c  wmfire.c
